2006-09-26  Enrico Sersale <enrico.sersale@gmail.com>

	* Modules/Fonts/FontModule.m: impemented -willUnselect (by Ingolf Jandt <i.jandt@web.de>)

2006-09-25  Riccardo Mottola <riccardo@kaffe.org>
	* Modules/ColorSchemes/NSColorStringMethods.h:
	removed useless declaration
	* Modules/ColorSchemes/PreviewView.m:
	implemented text display in controls and some cleanup

2006-09-25  Enrico Sersale <enrico.sersale@gmail.com>

	* Modules/Fonts: added fonts module by Ingolf Jandt <i.jandt@web.de>

2006-09-17  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile: added top level makefile to build/install the
	whole system preferences stuff.
	* INSTALL: removed install instructions ... now done by makefile

2006-09-10  Riccardo Mottola <riccardo@kaffe.org>

	* Modules/ColorSchemes: implemented Apply, improved interface
	
2006-09-10  Riccardo Mottola <riccardo@kaffe.org>

	* Modules/ColorSchemes: added color schemes module
	
2006-08-31  Fred Kiefer <FredKiefer@gmx.de>

	* Modules/Defaults/Defaults.m: Include limits.h to have INT_MAX
	and INT_MIN defined. 
	Patch by Andreas Höschler <ahoesch@smartsoft.de>.