@@ -1,3 +1,9 @@
+2006-09-28  Enrico Sersale <enrico@fibernet.ro>
+
+	* Modules/ColorSchemes/ColorSchemes.m: 
+  Impemented -willUnselect.
+  Avoid some compiler warning.
+
 2006-09-26  Enrico Sersale <enrico.sersale@gmail.com>
 
 	* Modules/Fonts/FontModule.m: impemented -willUnselect (by Ingolf Jandt <i.jandt@web.de>)
